--- a/art-gallery-website/starter-code/style.css
+++ b/art-gallery-website/starter-code/style.css
@@ -1,32 +1,70 @@
+:root {
+      /* COLOR */
+  --c-dark: #151515;
+  --c-gray: #444444;
+  --c-accent: #D5966C;
+  --c-light: #FFFFFF;
+
+  /* FONTS */
+  --font-p: 'Outfit', sans-serif;
+  --font-heading: 'Big Shoulders Display', sans-serif;
+
+  /* FONTSIZE */
+  --font-size-big: clamp(3.75rem, 2.9577rem + 3.3803vw, 6rem);
+  --font-size-medium: clamp(3.125rem, 2.9049rem + 0.9390vw, 3.75rem);
+
+  --p-size-big: clamp(1.125rem, 1.0370rem + 0.3756vw, 1.375rem);;
+  --p-size-small: clamp(1rem, 0.9560rem + 0.1878vw, 1.125rem);
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.hero img {
-    display: block;
-}
-
-@media screen and (max-width: 700px) {
-    .hero img {
-        width: 100%;
-    }
-}
-
-.hero h1 {
-    font-size: 2rem;
-    margin: 1.5rem 1rem;
+h1,
+h2,
+h3 {
+    font-family: var(--font-heading);    
     text-transform: uppercase;
+}
+
+h1 {
+    font-size: var(--font-size-big);
+    margin: 1.5rem 1rem;
+}
+
+h2 {
+    font-size: 2.5rem;
+}
+
+p {
+    font-size: var(--p-size-big);
+    font-family: var(--font-p);
+}
+
+footer p {
+    font-size: var(--p-size-small);
 }
 
 .hero h1>span {
     display: block;
 }
 
-.hero p {
-     
-    margin: 0 1 1.5rem;
+img {
+    display: block;    
+    object-fit: cover;
+}
+
+@media screen and (max-width: 700px) {
+    .hero img {
+        width: 100%;
+    }
+
+    .hero p {
+        margin: 0 1rem;
+    }
 }
 
 .hero button {    
@@ -55,18 +93,13 @@
     } */
     
     .hero h1 {
-        font-size: 2rem;
         margin: 1.5rem 0;
         grid-column: 3;
         grid-row: 1;
         align-self: end;
         position: relative;
         left: -3.5rem;        
-    }
-    
-    .hero h1>span {
-        display: block;
-    }
+    }  
 
     .hero__txt__right {
         grid-column: 3;
@@ -88,11 +121,11 @@
 @media screen and (min-width: 1000px) {
     .hero {
         display: grid;
-        grid-template-columns: 2fr 1fr 1fr;  
+        grid-template-columns: 2fr 1fr 1fr;
     }
 
     .hero__black {
-        background-color: black;
+        background-color: var(--c-dark);
         grid-column: 1/2;
         grid-row: 1/3;
         width: 100%;
@@ -112,7 +145,6 @@
         position: relative;
         left: 15%;
         color: white;
-        font-size: 3rem;
         margin: 1.5rem 0;
         align-self: center;
     }
@@ -130,7 +162,6 @@
     }
     
     .hero p {
-        color: black;
         margin: 1.5rem 0;
     }
     
@@ -138,3 +169,83 @@
         margin: 0 0 1.5rem; 
     }  
 }
+
+@media screen and (max-width: 700px) {
+    .main picture {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.main {
+    max-width: 90%;
+    margin: 7.5rem auto;
+    display: grid;
+    gap: 1rem;    
+}
+
+@media screen and (min-width: 700px) {
+    .main {
+        grid-template-columns: repeat(12, 1fr);      
+    }
+
+    .main img {
+        width: 100%;        
+    }
+
+    .main__day-txt-wrap {
+        grid-column: 1/6;
+        grid-row: 1/2;
+    }
+
+    .main__img-1 {
+        grid-column: 6/13;
+        grid-row: 1/2;
+    }
+
+    .main__img-2 {
+        grid-column: 1/8;
+        grid-row: 2/4;
+    }
+
+    .main__img-3 {
+        grid-column: 8/13;
+        grid-row: 2/3; 
+    }
+
+    .main__inspired-txt-wrap {
+        grid-column: 8/13;
+        grid-row: 3/4;
+        
+    }
+}
+
+.main p {
+    max-width: 80%;
+    margin-top: 1.5rem;
+}
+
+.main__day-txt-wrap {
+    padding: 1rem 0;
+}
+
+.main__inspired-txt-wrap,
+.footer {
+    padding: clamp(2rem, 0.9437rem + 4.5070vw, 5rem);
+    background-color: var(--c-dark);
+    color: var(--c-light);
+}
+
+@media screen and (max-width: 700px) {
+    .footer p {
+        margin: 2.4rem 0;
+    }
+}
+
+.footer__social-media {
+    display: flex;
+    gap: 1rem;
+}
+
+
+
